// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FinderItem Drag & drop should match snapshot if dragEnabled is \`true\` 1`] = `
<div draggable="true" class="item draggable">
  <!---->
  <div class="inner-item"></div>
  <div class="arrow"></div>
</div>
`;

exports[`FinderItem Expand should match snapshot if expanded 1`] = `
<div draggable="false" class="item expanded">
  <!---->
  <div class="inner-item"></div>
  <div class="arrow"></div>
</div>
`;

exports[`FinderItem Selection should match snapshot if selectable 1`] = `
<div draggable="false" class="item"><input type="checkbox">
  <div class="inner-item"></div>
  <div class="arrow"></div>
</div>
`;

exports[`FinderItem should match snapshot 1`] = `
<div draggable="false" class="item">
  <!---->
  <div class="inner-item"></div>
  <div class="arrow"></div>
</div>
`;
